# buildroot_avs_avs_client

./: CMakeLists.txt
ApplicationUtilities/DefaultClient/include/DefaultClient/: DefaultClient.h
CapabilityAgents/AIP/include/AIP/: AudioInputProcessor.h
CapabilityAgents/AIP/src/: AudioInputProcessor.cpp
CapabilityAgents/Alerts/src/: AlertsCapabilityAgent.cpp
DisplayCard/: CMakeLists.txt  DisplayCardImpCom.h  DisplayCardsD
ESP/src/: ESPDataProvider.cpp
KWD/: CMakeLists.txt
KWD/DSP/: CMakeLists.txt
KWD/DSP/include/: DSPKeyWordDetector.h  awe_esp.h  awelib.h  utiltypes.h
KWD/DSP/model/: AMLogic_VUI_Solution_Model.awb  AMLogic_VUI_Solution_Model_Gen2_2Mics.awb  AMLogic_VUI_Solution_Model_Gen2_4Mics.awb  AMLogic_VUI_Solution_Model_Gen2_6Mics.awb  switch_mics_num.sh
KWD/DSP/src/: CMakeLists.txt  DSPKeyWordDetector.cpp
KWD/DSP/test/: CMakeLists.txt  DSPKeyWordDetectorTest.cpp
Media/: netfile.raw
MediaPlayer/include/MediaPlayer/: MediaPlayer.h  UrlSource.h
MediaPlayer/src/: MediaPlayer.cpp  UrlSource.cpp
SampleApp/include/SampleApp/: GuiRenderer.h  InteractionManager.h  KeyEvent.h  KeyEventProcess.h  PortAudioMicrophoneWrapper.h  SampleApplication.h  UIManager.h  UserInputKeyManager.h  UserInputManager.h
SampleApp/src/: CMakeLists.txt  GuiRenderer.cpp  InteractionManager.cpp  KeyEvent.cpp  KeyEventProcess.cpp  PortAudioMicrophoneWrapper.cpp  SampleApplication.cpp  UIManager.cpp  UserInputKeyManager.cpp  UserInputManager.cpp  main.cpp
setup_app/: avs_token_app-0.2.1.apk  avs_token_app-0.2.apk  avs_token_app_0.4.1.apk
